# OpenABM-Covid19

./: .gitignore  Makefile  configure.ac
documentation/parameters/: active_intervention_parameters.md  infection_parameters.md  parameter_dictionary.md
examples/: ct_paper.py  novid.py  novid_101.ipynb  novid_101.py  novid_102.ipynb  novid_extended_output.ipynb  novid_simple.py  novid_simple_soft.py  novid_simple_symptoms.py  test.py
inst/default_params/: baseline_parameters.csv
research/: base.py  figure1.sh  plot_figure1.py  simulations_figure1.py
src/: R_C_interface.c  constant.h  demographics.c  disease.c  hashset.c  hashset.h  individual.c  individual.h  input.c  interventions.c  interventions.h  model.c  model.h  network.c  params.c  params.h  params_utils.i  setup.py  utilities.c
src/COVID19/: model.py
src/COVID19/default_params/: baseline_parameters.csv
tests/: test_infection_dynamics.py
tests/data/: baseline_household_demographics.csv  baseline_parameters.csv  baseline_parameters_transpose.csv
